--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # VITE_API_URL=http://localhost:8000/api/v1
-VITE_API_URL=http://35.222.74.225/api/v1
+VITE_API_URL=https://cidcomitra.com/cidco-mitra-api/public/api/v1
